Update instance in intermediary cache from all operations
Issue-ID: POLICY-5673
Change-Id: I0161f7ee0fa520438e3fa73e2f1f1d867fe3566f
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>